--- a/Wimym.Backend/appsettings.json
+++ b/Wimym.Backend/appsettings.json
@@ -4,5 +4,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WimymCnn": "Server=(localdb)\\mssqllocaldb;Database=WimymDb;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
