--- a/Wimym.Api/Wimym.Api.csproj
+++ b/Wimym.Api/Wimym.Api.csproj
@@ -10,12 +10,17 @@
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="2.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
   </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\Wimym.Common\Wimym.Common.csproj" />
     <ProjectReference Include="..\Wimym.DatabaseContext\Wimym.DatabaseContext.csproj" />
     <ProjectReference Include="..\Wimym.Services\Wimym.Services.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <Folder Include="Uploads\" />
   </ItemGroup>
 
 </Project>
