--- a/Wimym.DatabaseContext/Wimym.DatabaseContext.csproj
+++ b/Wimym.DatabaseContext/Wimym.DatabaseContext.csproj
@@ -5,6 +5,12 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Config\CommentsPerPhotoConfig.cs" />
+    <Compile Remove="Config\LikesPerPhotoConfig.cs" />
+    <Compile Remove="Config\PhotoConfig.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="2.2.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="2.2.1" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.2.1">
