REgister user mods

--- a/Auth/appsettings.json
+++ b/Auth/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=.\\SQL2012;Database=_WimymCore;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DefaultConnection": "Server=.\\SQL2012;Database=_WimymDb;Trusted_Connection=True;MultipleActiveResultSets=true"
   },
   "Client": {
     "ClientId": "SPA-APPLICATION-WSDW1S-SDW5S-W6S6S-WD88",
