--- a/Wimym.Front/appsettings.json
+++ b/Wimym.Front/appsettings.json
@@ -12,5 +12,8 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "WimymFrontContext": "Server=(localdb)\\mssqllocaldb;Database=WimymFrontContext-d8d726b2-906a-4310-8ef4-e96b65399708;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
