--- a/Wimym.Api/Wimym.Api.csproj
+++ b/Wimym.Api/Wimym.Api.csproj
@@ -11,6 +11,7 @@
     <Compile Remove="Controllers\PhotoController.cs" />
     <Compile Remove="Controllers\ReportController.cs" />
     <Compile Remove="ViewModels\PhotoViewModel.cs" />
+    <Compile Remove="ViewModels\TokenResponse.cs" />
   </ItemGroup>
 
   <ItemGroup>
@@ -18,6 +19,7 @@
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="2.7.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.2.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="4.0.1" />
   </ItemGroup>
 
